# PansimNuc

./: .gitignore  README.md  example.conf  example_no_tracking.conf  frequency_spectra.R  ld_analysis.R  pixi.toml  plot_allele_frequencies.R  plot_haplotype_network.R  plot_haplotypes.R  plot_sfs_element.R  plot_sfs_gff.R  plot_sfs_nuc.R  plot_te_copy_numbers.R  print_DFEs.R  sample_biofile.py  sv_plot.R
pansimnuc/: Cargo.toml  root_genome.debug.gff3
pansimnuc/src/: config.rs  demography.rs  gff.rs  main.rs  mutation.rs  population.rs  structural.rs  tracking.rs
parameter_sweep/: AGR_grid.csv  grid_parameter_sweep.py  lhs_parameter_sweep.py  mu_vs_selection_vs_recombination_grid.csv  mu_vs_selection_vs_recombination_vs_TE_grid.csv  mu_vs_selection_vs_recombination_vs_migration_grid.csv  run_grid_parameter_sweep.sh  run_grid_sweep.slurm  run_lhs_parameter_sweep.sh  run_lhs_sweep.slurm  run_parameter_sweep.sh
publication_configs/: AGR_base.conf  mu_vs_selection_vs_recombination_base.conf
scripts/: generate_synthetic_genome.py  ld_analysis.R  plot_sv.R  plot_te_copy_numbers.R
test_configs/: TE-COPY_duprate_high_delrate_high.conf  TE-COPY_duprate_high_delrate_high_multiplier_none_inversion_none.conf  TE-COPY_duprate_high_delrate_high_multiplier_none_inversion_none_recombination_high.conf  TE-COPY_duprate_high_delrate_high_multiplier_none_inversion_none_recombination_low.conf  TE-COPY_duprate_high_delrate_high_recombination_high.conf  TE-COPY_duprate_high_delrate_high_recombination_low.conf  TE-COPY_duprate_high_delrate_low.conf  TE-COPY_duprate_low_delrate_high.conf  (+85 more)
(+22 files in other folders)
