[package]
name = "PansimNuc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
noodles-fasta = "0.60.0"
noodles-gff = "0.55.0"
rayon = "1.5"
logsumexp = "0.1"
rustc-hash = "2.1.1"
rand = "0.8.5"
rand_distr = "0.4"
statrs = "0.16"
levenshtein = "1.0.5"
petgraph = "0.8.3"
itertools = "0.14.0"
triple_accel = "*"

[profile.release]
debug = true